# snowflake-agentic-platform

./: .gitignore  EXECUTION_PLAN.md  README.md  bootstrap.sh  orchestrator_logic_guide_healthcare.md  pyproject.toml  test_dispatcher_agent.py
.github/workflows/: deploy-dev.yml  deploy-prod.yml  test.yml
coco-healthcare-skills/: .gitignore  README.md  hooks.json  skills.json.template
coco-healthcare-skills/agents/: health-sciences-incubator.md  health-sciences-solutions.md
coco-healthcare-skills/scripts/: demo_walkthrough.py  generate_dicom_model_spreadsheet.py  generate_industry_framework_pdf.py  generate_orchestrators.py  generate_pdf_guide.py  qa_validate_orchestrator.py  setup_observability_tables.sql
coco-healthcare-skills/shared/observability/: __init__.py  logger.py
coco-healthcare-skills/skills/hcls-cross-cke-clinical-trials/: SKILL.md
coco-healthcare-skills/skills/hcls-cross-cke-pubmed/: SKILL.md
coco-healthcare-skills/skills/hcls-cross-cortex-agent-chat/: SKILL.md
coco-healthcare-skills/skills/hcls-cross-research-problem-selection/: SKILL.md
coco-healthcare-skills/skills/hcls-cross-validation/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-dsafety-clinical-trial-protocol/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-dsafety-pharmacovigilance/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-genomics-nextflow/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-genomics-scvi-tools/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-genomics-single-cell-qc/: SKILL.md
coco-healthcare-skills/skills/hcls-pharma-genomics-survival-analysis/: SKILL.md
coco-healthcare-skills/templates/: orchestrator.md.j2  skills_incubator.yaml
config/semantic_models/: drilling_sensor_model.yaml  orchestrated_drilling_model.yaml
config/spcs/: drilling_dashboard_service.sql
config/templates/: drilling_ops.yaml
deployment/: Dockerfile  docker-compose.yml  entrypoint.sh  spcs_service.sql
docs/: ARCHITECTURE.md  DEMO_QA.md  DEVOPS.md  EXECUTIVE_VISION.md
generated_app/: requirements.txt  spcs_service.yaml
generated_app/backend/: main.py
generated_app/backend/routes/: search.py
orchestrator/: GAP_ANALYSIS.md  README.md  VALUE_PROPOSITION.md
orchestrator/backend/: config.py  requirements.txt  server.py
orchestrator/cortex/: health_semantic_model.yaml
orchestrator/deploy/: Dockerfile  deploy.sh  nginx.conf  service_spec.yaml  setup.sql  supervisord.conf
orchestrator/frontend/: index.html  package-lock.json  package.json
scripts/: deploy_to_spcs.sh
src/: __init__.py
src/agents/: __init__.py
src/app/: orchestrator.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  loader.py  platform_config.py  use_case_schema.py
src/generators/: __init__.py  app_generator.py  ddl_generator.py
src/meta_agent/: __init__.py  approval.py  graph.py  state.py
src/observability/: __init__.py  dashboards.sql  langfuse_tracer.py  tracer.py
src/state/: __init__.py  schema_setup.sql  snowflake_checkpoint.py  state_manager.py  tables.sql
tests/: test_integration.py
tests/e2e/: run_all.py  test_layer1_discovery.py  test_layer2_profiling.py  test_layer3_chunking.py  test_layer4_search.py  test_layer5_semantic.py  test_layer6_ml.py  test_layer7_app.py
tests/integration/: test_app_generator_e2e.py  test_document_chunker_e2e.py  test_drilling_ops_e2e.py  test_meta_agent_e2e.py  test_ml_pipeline_e2e.py  test_orchestration_e2e.py  test_search_builder_e2e.py  test_semantic_model_e2e.py
tests/unit/: __init__.py  conftest.py
(+130 files in other folders)
