[project]
name = "snowflake-agentic-platform"
version = "0.1.0"
description = "Self-assembling agent system for building AI applications on Snowflake"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-snowflake>=0.1.0",
    "langsmith>=0.1.0",
    "snowflake-connector-python>=3.0.0",
    "snowflake-snowpark-python>=1.20.0",
    "snowflake-ml-python>=1.6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
